Fixes bottom margin on captions.
Captions were showing a little too much margin at the bottom.  Corrected for
main content and sidebar captions.

mario h.
node/62245

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -3167,7 +3167,7 @@ ul.calendar-links,
 }
 .field-name-field-file-shared-caption p {
   margin-top: 0;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 /* Pager plugin css */
